@@ -2,6 +2,7 @@
    * OpenMP speedup for linear interpolation
    * Disabled decoding JPEG (lossy DNG) data from memory buffer
      for libjpeg version less than 8.
+   * hotspots moved to virtual functions
 
 2012-09-04 Alex Tutubalin <lexa@lexa.ru>
    * Backported improvements from LibRaw 0.14:
